various updates for 0.2.0 release to pypi

--- a/README
+++ b/README
@@ -27,10 +27,10 @@ python setup.py install
 
 Software links:
 
-Usage documentation: http://bitbucket.org/beno/python-sword2/wiki/Home 
+Usage documentation: https://github.com/swordapp/python-client-sword2/wiki 
 
 API documentation:   http://packages.python.org/sword2/
 
-Repository:          http://bitbucket.org/beno/python-sword2
+Repository:          https://github.com/swordapp/python-client-sword2
 
-Issue-tracker:       http://bitbucket.org/beno/python-sword2/issues
+Issue-tracker:       https://github.com/swordapp/python-client-sword2/issues
